--- a/static/css/main.less
+++ b/static/css/main.less
@@ -3,6 +3,45 @@
 @green: #8fc829;
 @pink: #be1a8d;
 
+@height: 375px;
+@margin: 25px;
+@button-width: 40px;
+
 /* Custom highlight */
 ::-moz-selection{ background:@pink; color:#fff; text-shadow: -1px 1px 1px darken(@pink, 15%); }
 ::selection { background:@pink; color:#fff; text-shadow: -1px 1px 1px darken(@pink, 15%); }
+
+
+#main{
+    padding-top: 80px;
+}
+
+.search{
+    height: 100px;
+    margin-bottom: @margin;
+    position: relative;
+    .search-bar{
+        padding-right: @button-width;
+        width: 330px - @button-width;
+    }
+    .submit{
+        background: #eee;
+        position: absolute;
+        right: 0;
+        text-indent: -999em;
+        top: 0;
+        width: @button-width - 4px;
+        z-index: 5;
+    }
+}
+
+.liked{
+    background: blue;
+    height: @height;
+    margin-bottom: @margin;
+}
+
+.results{
+    background: red;
+    height: 100px + @height + @margin;
+}
