--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,24 @@
 
 
 {% block js %}
+<script src="/static/js/words.js" type="text/javascript"></script>
 {% endblock %}
 
 
 {% block main %}
+<div class="container">
+  <div class="row">
+    <div class="span6">
+      <form action="/search" method="GET" class="search">
+        <input type="text" name="search" value="" class="search-bar"
+               autocomplete="off"/>
+        <input type="submit" class="submit" value="Submit" name="" />
+      </form>
+      <div class="liked"></div>
+    </div>
+    <div class="span10">
+      <div class="results"></div>
+    </div>
+  </div>
+</div>
 {% endblock %}
