--- a/static/css/main.less
+++ b/static/css/main.less
@@ -13,7 +13,7 @@
 
 
 #main{
-    padding-top: 80px;
+    padding-top: 100px;
 }
 
 .search{
@@ -21,6 +21,7 @@
     margin-bottom: @margin;
     position: relative;
     .search-bar{
+        font-size: 14px;
         padding-right: @button-width;
         width: 330px - @button-width;
     }
