Add popover to search input

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
   <div class="fill">
     <div class="container">
 
-      <a href="/" class="brand">site</a>
+      <a href="/" class="brand">domain</a>
 
       <ul class="secondary-nav">
         <li>
@@ -24,7 +24,7 @@
           </li>
 
         <li>
-          <a href="http://github.com/zachwill/flask_heroku">Github</a>
+          <a href="http://github.com/zachwill/domains">Github</a>
         </li>
       </ul>
 
