--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,8 @@
 
   <!-- Additional JavaScript libraries and plugins... -->
   <script src="/static/js/libs/bootstrap-dropdown.js"></script>
+  <script src="/static/js/libs/bootstrap-twipsy.js"></script>
+  <script src="/static/js/libs/bootstrap-popover.js"></script>
 
   {% block js %}{% endblock %}
 
