--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
       <form action="/search" method="GET" class="search">
         <input type="text" name="search" class="search-bar"
                autocomplete="off" data-content="Something here."
-               data-original-title="And a title."/>
+               data-original-title="And a title." data-api="wordnik"/>
         <input type="submit" class="submit" value="Submit" name="" />
       </form>
       <div class="liked"></div>
