--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>{% block title %}yoursite.com{% endblock %}</title>
+  <title>{% block title %}domainsaurus{% endblock %}</title>
 
   <meta name="description" content="">
   <meta name="author" content="">
