--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>{% block title %}domainsaurus{% endblock %}</title>
+  <title>{% block title %}domainsaurus.com{% endblock %}</title>
 
   <meta name="description" content="">
   <meta name="author" content="">
@@ -59,6 +59,7 @@
 
   <!-- Additional JavaScript libraries and plugins... -->
   <script src="/static/js/libs/bootstrap-dropdown.js"></script>
+  <script src="/static/js/libs/bootstrap-tabs.js"></script>
   <script src="/static/js/libs/bootstrap-twipsy.js"></script>
   <script src="/static/js/libs/bootstrap-popover.js"></script>
 
