Full domainr functionality

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -54,4 +54,8 @@
 #domainr, #wordnik{
     height: 500px;
     overflow-y: scroll;
+    .label{
+        float: right;
+        margin-right: 30px;
+    }
 }
