Change color and JS

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -4,14 +4,14 @@
 @pink: #be1a8d;
 @mac-green: #38d742;
 @twitter-blue: #0069D6;
+@twitter-green: #46a546;
 
-@height: 375px;
 @margin: 25px;
 @button-width: 40px;
 
 /* Custom highlight */
-::-moz-selection{ background:@pink; color:#fff; text-shadow: -1px 1px 1px darken(@pink, 15%); }
-::selection { background:@pink; color:#fff; text-shadow: -1px 1px 1px darken(@pink, 15%); }
+::-moz-selection{ background:@twitter-green; color:#fff; text-shadow: -1px 1px 1px darken(@twitter-green, 15%); }
+::selection { background:@twitter-green; color:#fff; text-shadow: -1px 1px 1px darken(@twitter-green, 15%); }
 
 .topbar{
     a{
@@ -22,7 +22,7 @@
         text-decoration: none;
     }
     .fill, .menu-dropdown{
-        #gradient > .vertical(darken(@mac-green, 15%), darken(@mac-green, 20%));
+        #gradient > .vertical(darken(@twitter-green, 5%), darken(@twitter-green, 10%));
     }
 }
 
