--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,9 +1,9 @@
 
-::-moz-selection{background:#be1a8d;color:#fff;text-shadow:-1px 1px 1px #7b115b;}
-::selection{background:#be1a8d;color:#fff;text-shadow:-1px 1px 1px #7b115b;}
+::-moz-selection{background:#46a546;color:#fff;text-shadow:-1px 1px 1px #2f6f2f;}
+::selection{background:#46a546;color:#fff;text-shadow:-1px 1px 1px #2f6f2f;}
 .topbar a{color:#fff;}.topbar a:hover{background:#0069d6;}
 .topbar .brand:hover{text-decoration:none;}
-.topbar .fill,.topbar .menu-dropdown{background-color:#1c8d23;background-repeat:repeat-x;background-image:-khtml-gradient(linear, left top, left bottom, from(#21a229), to(#1c8d23));background-image:-moz-linear-gradient(top, #21a229, #1c8d23);background-image:-ms-linear-gradient(top, #21a229, #1c8d23);background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #21a229), color-stop(100%, #1c8d23));background-image:-webkit-linear-gradient(top, #21a229, #1c8d23);background-image:-o-linear-gradient(top, #21a229, #1c8d23);background-image:linear-gradient(top, #21a229, #1c8d23);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#21a229', endColorstr='#1c8d23', GradientType=0);}
+.topbar .fill,.topbar .menu-dropdown{background-color:#378137;background-repeat:repeat-x;background-image:-khtml-gradient(linear, left top, left bottom, from(#3e933e), to(#378137));background-image:-moz-linear-gradient(top, #3e933e, #378137);background-image:-ms-linear-gradient(top, #3e933e, #378137);background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #3e933e), color-stop(100%, #378137));background-image:-webkit-linear-gradient(top, #3e933e, #378137);background-image:-o-linear-gradient(top, #3e933e, #378137);background-image:linear-gradient(top, #3e933e, #378137);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#3e933e', endColorstr='#378137', GradientType=0);}
 #main{padding-top:100px;}
 .search{height:100px;margin:130px 0 25px;position:relative;}.search .search-bar{font-size:14px;padding-right:40px;width:290px;}
 .search .submit{background:#eee;position:absolute;right:0;text-indent:-999em;top:0;width:36px;z-index:5;}
