Adjust styling of Wordnik results

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -64,6 +64,10 @@
     .row{
         margin-bottom: 10px;
     }
+    h5{
+        line-height: 18px;
+        text-align: right;
+    }
 }
 
 footer{
