--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,4 +9,5 @@
 .search .submit{background:#eee;position:absolute;right:0;text-indent:-999em;top:0;width:36px;z-index:5;}
 #domainr,#wordnik{height:500px;overflow-y:scroll;}#domainr .label,#wordnik .label{float:right;margin-right:30px;}
 #wordnik .row{margin-bottom:10px;}
+#wordnik h5{line-height:18px;text-align:right;}
 footer{border:none;}
