Calculate animated scroll for Wordnik results

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,10 +26,10 @@
 
         <ul class="tabs" data-tabs="tabs">
           <li class="active">
-            <a href="#domainr">Domainr</a>
+            <a href="#domainr" tabindex=2>Domainr</a>
           </li>
           <li>
-            <a href="#wordnik">Wordnik</a>
+            <a href="#wordnik" tabindex=3>Wordnik</a>
           </li>
         </ul>
 
