Wordnik functionality actually works

--- a/templates/home.html
+++ b/templates/home.html
@@ -44,3 +44,19 @@
   </div>
 </div>
 {% endblock %}
+
+
+{% block footer %}
+<div class="container">
+    <div class="page-header">
+        <h1>domsaurus <small>An easy-to-use mashup of resources</small></h1>
+    </div>
+    <div class="row">
+        <div class="span5">
+            <h3>Instructions</h3>
+            <p>Although, you've probably already figured it out.</p>
+        </div>
+        <div class="span11"></div>
+    </div>
+</div>
+{% endblock %}
