--- a/static/css/main.less
+++ b/static/css/main.less
@@ -68,6 +68,14 @@
         line-height: 18px;
         text-align: right;
     }
+    h3{
+        line-height: 24px;
+        text-align: right;
+    }
+    p.span6{
+        color: #ccc;
+        line-height: 24px;
+    }
 }
 
 footer{
