--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
 
       <ul class="secondary-nav">
         <li>
-          <a href="/about/">About</a>
+          <a href="#about">About</a>
         </li>
 
 
