--- a/templates/home.html
+++ b/templates/home.html
@@ -47,9 +47,9 @@
 
 
 {% block footer %}
-<div class="container">
+<div class="container" id="about">
     <div class="page-header">
-        <h1>domsaurus <small>An easy-to-use mashup of resources</small></h1>
+        <h1>domainsaurus <small>An easy-to-use mashup of resources</small></h1>
     </div>
     <div class="row">
         <div class="span5">
