Updates to usability

--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
 
 
         <li>
-          <a href="http://github.com/zachwill/domains">Github</a>
+          <a href="http://github.com/zachwill/domainsaurus">Github</a>
         </li>
       </ul>
 
