--- a/templates/home.html
+++ b/templates/home.html
@@ -54,9 +54,17 @@
     <div class="row">
         <div class="span5">
             <h3>Instructions</h3>
-            <p>Although, you've probably already figured it out.</p>
+            <p>Although, you've probably already figured it out, this site was
+            built to simplify looking for valid domain names.</p>
         </div>
         <div class="span11"></div>
+    </div>
+    <div class="row">
+      <div class="span5">
+        <h3>Shortcuts</h3>
+        <p>Jump between tabs with the <strong>TAB</strong> key.</p>
+      </div>
+      <div class="span11"></div>
     </div>
 </div>
 {% endblock %}
