--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,8 +9,10 @@ body:after{content:url(/static/img/search.png);display:none;}
 .search{height:100px;margin:130px 0 25px;position:relative;}.search .search-bar{font-size:14px;padding-right:40px;width:290px;}
 .search .submit{background:url(/static/img/search.png) #eeeeee no-repeat center center;position:absolute;right:0;text-indent:-999em;top:0;width:36px;z-index:5;}
 #domainr,#wordnik{height:500px;overflow-y:scroll;}#domainr .label,#wordnik .label{float:right;margin-right:30px;}
-#wordnik .row{margin-bottom:10px;}
+#domainr{background:url(/static/img/idea.png) no-repeat center 25%;}
+#wordnik{background:url(/static/img/book.png) no-repeat center 25%;}#wordnik .row{margin-bottom:10px;}
 #wordnik h5{line-height:18px;text-align:right;}
 #wordnik h3{line-height:24px;text-align:right;}
 #wordnik p.span6{color:#ccc;line-height:24px;}
 footer{border:none;}
+.video{background:#222;height:315px;}
