--- a/static/css/main.less
+++ b/static/css/main.less
@@ -66,7 +66,12 @@ body:after{
     }
 }
 
+#domainr{
+    background: url(/static/img/idea.png) no-repeat center 25%;
+}
+
 #wordnik{
+    background: url(/static/img/book.png) no-repeat center 25%;
     .row{
         margin-bottom: 10px;
     }
@@ -86,4 +91,9 @@ body:after{
 
 footer{
     border: none;
+}
+
+.video{
+    background: #222;
+    height: 315px;
 }
