Update the home page template

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,19 +52,21 @@
         <h1>domainsaurus <small>An easy-to-use mashup of resources</small></h1>
     </div>
     <div class="row">
-        <div class="span5">
+        <div class="span6">
             <h3>Instructions</h3>
             <p>Although, you've probably already figured it out, this site was
             built to simplify looking for valid domain names.</p>
         </div>
-        <div class="span11"></div>
+        <div class="span9 offset1">
+            <div class="video"></div>
+        </div>
     </div>
     <div class="row">
-      <div class="span5">
+      <div class="span6">
         <h3>Shortcuts</h3>
         <p>Jump between tabs with the <strong>TAB</strong> key.</p>
       </div>
-      <div class="span11"></div>
+      <div class="span9 offset1"></div>
     </div>
 </div>
 {% endblock %}
