--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,12 +7,12 @@ body:after{content:url(/static/img/search.png);display:none;}
 .topbar .fill,.topbar .menu-dropdown{background-color:#378137;background-repeat:repeat-x;background-image:-khtml-gradient(linear, left top, left bottom, from(#3e933e), to(#378137));background-image:-moz-linear-gradient(top, #3e933e, #378137);background-image:-ms-linear-gradient(top, #3e933e, #378137);background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #3e933e), color-stop(100%, #378137));background-image:-webkit-linear-gradient(top, #3e933e, #378137);background-image:-o-linear-gradient(top, #3e933e, #378137);background-image:linear-gradient(top, #3e933e, #378137);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#3e933e', endColorstr='#378137', GradientType=0);}
 #main{padding-top:100px;}
 .search{height:100px;margin:130px 0 25px;position:relative;}.search .search-bar{font-size:14px;padding-right:40px;width:290px;}
-.search .submit{background:url(/static/img/search.png) #eeeeee no-repeat center center;position:absolute;right:0;text-indent:-999em;top:0;width:36px;z-index:5;}
+.search .submit{background:url(/static/img/search.png) #eeeeee no-repeat center center;height:28px;position:absolute;right:0;text-indent:-999em;top:0;width:36px;z-index:5;}
 #domainr,#wordnik{height:500px;overflow-y:scroll;}#domainr .label,#wordnik .label{float:right;margin-right:30px;}
 #domainr{background:url(/static/img/idea.png) no-repeat center 25%;}
 #wordnik{background:url(/static/img/book.png) no-repeat center 25%;}#wordnik .row{margin-bottom:10px;}
 #wordnik h5{line-height:18px;text-align:right;}
 #wordnik h3{line-height:24px;text-align:right;}
-#wordnik p.span6{color:#ccc;line-height:24px;}
+#wordnik p.span5{color:#ccc;line-height:24px;}
 footer{border:none;}
 .video{background:#222;height:315px;}
