--- a/templates/home.html
+++ b/templates/home.html
@@ -61,12 +61,20 @@
             <div class="video"></div>
         </div>
     </div>
-    <div class="row">
-      <div class="span6">
+    <div class="row bottom">
+      <div class="span-one-third">
         <h3>Shortcuts</h3>
         <p>Jump between tabs with the <strong>TAB</strong> key.</p>
       </div>
-      <div class="span9 offset1"></div>
+      <div class="span-one-third">
+        <h3>Inspiration</h3>
+        <p>This site was directly inspired by the ease-of-use of <a href="http://domai.nr">Domainr</a>.</p>
+      </div>
+      <div class="span-one-third">
+        <h3>Links</h3>
+        <p>Feel free to contribute to the project <a href="http://github.com/zachwill/domainsaurus">on Github</a>.
+        Also, here's a link to my <a href="http://www.zachwill.com">personal site</a>.</p>
+      </div>
     </div>
 </div>
 {% endblock %}
