More grammatical template changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -68,7 +68,8 @@
       </div>
       <div class="span-one-third">
         <h3>Inspiration</h3>
-        <p>This site was directly inspired by the ease-of-use of <a href="http://domai.nr">Domainr</a>.</p>
+        <p>This site was directly inspired by <a href="http://domai.nr">Domainr</a>
+        and its easy-to-use interface.</p>
       </div>
       <div class="span-one-third">
         <h3>Links</h3>
