Fix tab switch bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
 
   <title>{% block title %}domainsaurus.com{% endblock %}</title>
 
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Zach Williams, hey AT zachwill DOT com">
+  <meta name="description" content="An easy-to-use mashup of Domainr and Wordnik.">
 
   <!-- HTML5 shim, for IE 6-8 support of HTML elements -->
   <!--[if lt IE 9]>
@@ -59,6 +59,7 @@
 
   <!-- Additional JavaScript libraries and plugins... -->
   <script src="/static/js/libs/bootstrap-dropdown.js"></script>
+  <script src="/static/js/libs/bootstrap-modal.js"></script>
   <script src="/static/js/libs/bootstrap-tabs.js"></script>
   <script src="/static/js/libs/bootstrap-twipsy.js"></script>
   <script src="/static/js/libs/bootstrap-popover.js"></script>
