--- a/templates/home.html
+++ b/templates/home.html
@@ -43,6 +43,20 @@
 
   </div>
 </div>
+
+
+<!-- Modal HTML -->
+<div id="register-domain" class="modal fade">
+
+  <div class="modal-header">
+    <a href="#" class="close">&times;</a>
+    <h3>Modal Heading</h3>
+  </div>
+
+  <div class="modal-body">
+    <p>One fine body...</p>
+  </div>
+</div>
 {% endblock %}
 
 
