Minor template updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>{% block title %}domainsaurus.com{% endblock %}</title>
+  <title>{% block title %}domainsaurus{% endblock %}</title>
 
   <meta name="author" content="Zach Williams, hey AT zachwill DOT com">
   <meta name="description" content="An easy-to-use mashup of Domainr and Wordnik.">
