--- a/templates/home.html
+++ b/templates/home.html
@@ -50,7 +50,7 @@
 
   <div class="modal-header">
     <a href="#" class="close">&times;</a>
-    <h3>Modal Heading</h3>
+    <h5>Need to register your domain?</h5>
   </div>
 
   <div class="modal-body">
