Should have solved all modal bugs

--- a/templates/home.html
+++ b/templates/home.html
@@ -68,7 +68,7 @@
     <div class="row">
         <div class="span6">
             <h3>Instructions</h3>
-            <p>Although, you've probably already figured it out, this site was
+            <p>Although you've probably already figured it out, this site was
             built to simplify looking for valid domain names.</p>
         </div>
         <div class="span9 offset1">
