Now using ICanHaz.js for templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
   <!-- Need Modernizr? Uncomment the following script. -->
   <!-- <script src="/static/js/libs/modernizr-2.0.6.js"></script> -->
 
+  {% block mustache %}{% endblock %}
 </head>
 
 <body>
@@ -58,6 +59,7 @@
 
 
   <!-- Additional JavaScript libraries and plugins... -->
+  <script src="/static/js/libs/icanhaz.min.js"></script>
   <script src="/static/js/libs/bootstrap-dropdown.js"></script>
   <script src="/static/js/libs/bootstrap-modal.js"></script>
   <script src="/static/js/libs/bootstrap-tabs.js"></script>
