--- a/static/css/main.less
+++ b/static/css/main.less
@@ -64,6 +64,8 @@ body:after{
     .label{
         float: right;
         margin-right: 30px;
+        text-align: center;
+        width: 8px;
     }
 }
 
