--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,7 @@
         <input type="text" name="search" class="search-bar"
                autocomplete="off" data-api="domainr" tabindex=1
                data-content="Whether you're looking for a domain or similar words, your search ends here."
-               data-original-title="Search easily."
-        />
+               data-original-title="Search easily." />
         <input type="submit" class="submit" value="Submit" name="" />
       </form>
     </div>
