Minor formatting changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -98,8 +98,9 @@
 {% raw %}
 
 <script type="text/html" id="domainr_results">
-  <p class='span4'><a href='#' class='domain'>{{ domain }}</a>
-  <span class='{{ label }}'>{{{ symbol }}}</span>
+  <p class='span4'>
+    <a href='#' class='domain'>{{ domain }}</a>
+    <span class='{{ label }}'>{{{ symbol }}}</span>
   </p>
 </script>
 
