Additional use of ICanHaz templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -104,9 +104,17 @@
   </p>
 </script>
 
+<script type="text/html" id="domainr_div">
+  <div class="row">
+    {{{ templates }}}
+  </div>
+  <hr />
+</script>
+
 <script type="text/html" id="wordnik_definition">
   <div class='row'>
-    <h3 class='span3'>{{ value }}</h3><p class='span5'>{{ first_definition }}</p>
+    <h3 class='span3'>{{ value }}</h3>
+    <p class='span5'>{{ first_definition }}</p>
   </div>
 </script>
 
