--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,10 @@
   </div>
 
   <div class="modal-body">
-    <p>One fine body...</p>
+    <p>Use either of the buttons below to buy your domain.</p>
+  </div>
+
+  <div class="modal-footer">
   </div>
 </div>
 {% endblock %}
@@ -128,6 +131,11 @@
         {{/ words }}
       </div>
   </section>
+</script>
+
+<script type="text/html" id="modal_footer">
+  <a href="{{ namecheap }}" class="btn large namecheap">Namecheap</a>
+  <a href="{{ godaddy }}" class="btn large godaddy">GoDaddy</a>
 </script>
 
 {% endraw %}
