--- a/static/css/main.less
+++ b/static/css/main.less
@@ -15,7 +15,7 @@
 
 /* Image pre-loading... */
 body:after{
-    content: url(/static/img/search.png);
+    content: url(/static/img/search.png) url(/static/img/rotate.gif);
     display: none;
 }
 
