Add Vimeo video

--- a/templates/home.html
+++ b/templates/home.html
@@ -74,7 +74,8 @@
             built to simplify looking for valid domain names.</p>
         </div>
         <div class="span9 offset1">
-            <div class="video"></div>
+          <iframe src="http://player.vimeo.com/video/30922892?title=0&byline=0&portrait=0&color=4fba4f"
+                  width="520" height="325" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe>
         </div>
     </div>
     <div class="row bottom">
