Change Vimeo controls color

--- a/templates/home.html
+++ b/templates/home.html
@@ -74,7 +74,7 @@
             built to simplify looking for valid domain names.</p>
         </div>
         <div class="span9 offset1">
-          <iframe src="http://player.vimeo.com/video/30922892?title=0&byline=0&portrait=0&color=4fba4f"
+          <iframe src="http://player.vimeo.com/video/30922892?title=0&byline=0&portrait=0&color=0064cd"
                   width="520" height="325" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe>
         </div>
     </div>
