domai.nr -> domainr.com

--- a/templates/home.html
+++ b/templates/home.html
@@ -85,7 +85,7 @@
       </div>
       <div class="span-one-third">
         <h3>Inspiration</h3>
-        <p>This site was directly inspired by <a href="http://domai.nr">Domainr</a>
+        <p>This site was directly inspired by <a href="https://domainr.com/">Domainr</a>
         and its easy-to-use interface.</p>
       </div>
       <div class="span-one-third">
